--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 
     <img src="images/emran.png" alt=""><br>
 
-    <img src="images/hasan.jpg" alt="">
+    <img src="images/hasan.jpg" alt=""> <br>
+
+    <img src="images/ami.jpg"> <br>
+
+    <img src="images/image1.png"> <br>
+
+    <img src="images/profile1.png" alt=""><br>
+    <img src="images/b.png" alt=""> <br>
+    <img src="images/i.jpg" alt="">
 </body>
 </html>
