--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <img src="images/profile1.png" alt=""><br>
     <img src="images/b.png" alt=""> <br>
-    <img src="images/i.jpg" alt="">
+    <img src="images/i.jpg" alt=""> <br>
+    <img src="images/my.jpg" alt="">
 </body>
 </html>
